Fix row gap in Places

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,14 +15,15 @@
     display: grid;
     grid-template-rows: repeat(2, auto);
     grid-template-columns: 1fr 1.03fr;
-    gap: 28px;
+    row-gap: 48px;
+    column-gap: 28px;
   }
 }
 
 @media (min-width: 1024px) {
   .place {
     margin: 80px 48px;
-    gap: 32px;
+    column-gap: 32px;
   }
 }
 
@@ -30,6 +31,6 @@
   .place {
     margin-left: 148px;
     margin-right: 148px;
-    gap: 40px;
+    column-gap: 40px;
   }
 }
